--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
-    
+    <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
 
-    
+
 
 
 
